--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset='utf-8'>
     <link rel="stylesheet" href="stylesheets/stylesheet.css">
 
-    <title>Home Page -- Sean Parker</title>
+    <title>Sean Parker</title>
   </head>
 
   <body>
@@ -20,36 +20,36 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <div id="main_content" class="inner">
-          <section id="nav_content" class="inner">
-            <h2> Navigation </h2>
-            <p>
-                <a href="website_impl.html"> Website Implementation </a>
-            </p>
-          </section>
-          
+
           <section id="personal_info" class="inner">
               <h2> Personal Information </h2>
               <div id="education">
                 <h3> Education </h3>
                 <ul>
-                    <li> (2010 - 2017) <a href="http://st-ambrosecollege.org.uk" target="_blank">St Ambrose College</a></li>
-                    <li> (2017 - Present) BSc Computer Science at <a href="http://manchester.ac.uk" target="_blank"> The University of Manchester</a></li>
+                    <li> (2010 - 2017) <a href="https://st-ambrosecollege.org.uk" target="_blank">St Ambrose College</a></li>
+                    <li> (2017 - Present) BSc Computer Science at <a href="https://manchester.ac.uk" target="_blank"> The University of Manchester</a></li>
                 </ul>
               </div>
               <div id="projects">
                   <h3> Projects </h3>
                   <ul>
-                      <li> <a href="http://github.com/seanjparker/civ-2d" target="_blank">civ-2d</a> - a 2D turn-based strategy game built using Java Swing</li>
-                      <li> <a href="http://github.com/seanjparker/chess" target="_blank"> chess</a> - a chess engine with player vs computer</li>
+                      <li> <a href="https://github.com/seanjparker/civ-2d" target="_blank">civ-2d</a> - a 2D turn-based strategy game built using Java Swing</li>
+                      <li> <a href="https://github.com/seanjparker/chess" target="_blank">chess</a> - a chess engine with player vs computer</li>
+                      <li> <a href="https://github.com/alexdmtr/codeworks" target="_blank">codeworks</a> - open source online java editor and compiler</li>
                   </ul>
               </div>
-              <div id="Results">
-                  <h3> Results </h3>
+              <div id="results">
+                  <h3> Competitive Programming </h3>
                   <ul>
-                      <li>(2017) <a href="http://ukiepc.info/2017/" target="_blank">UKIPEC</a> 3<sup>rd</sup> place in Manchester</li>
-                      <li> (2017) <a href="http://www.nwerc.eu/" target="_blank">NWERC</a>
+                      <li>(2017) <a href="https://ukiepc.info/2017/" target="_blank">UKIPEC Regional</a> 3<sup>rd</sup> place in Manchester, 48<sup>th</sup> in UK & Ireland</li>
+                      <li>(2017) <a href="https://www.nwerc.eu/" target="_blank">NWERC World Qualifier</a> 113<sup>th</sup> in Northern Europe</li>
                   </ul>
               </div>
+              <div id="results">
+                  <h3> Hackathons </h3>
+                  <ul>
+                      <li>(2017) <a href="https://greatunihack.com/" target="_blank">GreatUniHack</a></li>
+                  </ul>
           </section>
       </div>
     </div>
@@ -60,8 +60,5 @@
           <p><a href="mailto:sean.parker@student.manchester.ac.uk">Contact Me</a></p>
       </footer>
     </div>
-
-
-
   </body>
 </html>
