--- a/index.html
+++ b/index.html
@@ -26,29 +26,29 @@
               <div id="education">
                 <h3> Education </h3>
                 <ul>
-                    <li> (2017 - Present) BSc Computer Science at <a href="https://manchester.ac.uk" target="_blank"> The University of Manchester</a></li>
-                    <li> (2010 - 2017) <a href="https://st-ambrosecollege.org.uk" target="_blank">St Ambrose College</a></li>
+                    <li> (2017 - Present) BSc Computer Science at <a href="www.manchester.ac.uk" target="_blank"> The University of Manchester</a></li>
+                    <li> (2010 - 2017) <a href="www.st-ambrosecollege.org.uk" target="_blank">St Ambrose College</a></li>
                 </ul>
               </div>
               <div id="projects">
                   <h3> Projects </h3>
                   <ul>
-                      <li> <a href="https://github.com/seanjparker/civ-2d" target="_blank">civ-2d</a> - a 2D turn-based strategy game built using Java Swing</li>
-                      <li> <a href="https://github.com/seanjparker/chess" target="_blank">chess</a> - a chess engine with player vs computer</li>
-                      <li> <a href="https://github.com/alexdmtr/codeworks" target="_blank">codeworks</a> - open source online java editor and compiler</li>
+                      <li> <a href="www.github.com/seanjparker/civ-2d" target="_blank">civ-2d</a> - a 2D turn-based strategy game built using Java Swing</li>
+                      <li> <a href="www.github.com/seanjparker/chess" target="_blank">chess</a> - a chess engine with player vs computer</li>
+                      <li> <a href="www.github.com/alexdmtr/codeworks" target="_blank">codeworks</a> - open source online java editor and compiler</li>
                   </ul>
               </div>
               <div id="results">
                   <h3> Competitive Programming </h3>
                   <ul>
-                      <li>(2017) <a href="https://ukiepc.info/2017/" target="_blank">UKIPEC Regional</a> 3<sup>rd</sup> place in Manchester, 48<sup>th</sup> in UK & Ireland</li>
-                      <li>(2017) <a href="https://www.nwerc.eu/" target="_blank">NWERC World Qualifier</a> 113<sup>th</sup> in Northern Europe</li>
+                      <li>(2017) <a href="www.ukiepc.info/2017/" target="_blank">UKIPEC Regional</a> 3<sup>rd</sup> place in Manchester, 48<sup>th</sup> in UK & Ireland</li>
+                      <li>(2017) <a href="www.nwerc.eu" target="_blank">NWERC World Qualifier</a> 113<sup>th</sup> in Northern Europe</li>
                   </ul>
               </div>
               <div id="results">
                   <h3> Hackathons </h3>
                   <ul>
-                      <li>(2017) <a href="https://greatunihack.com/" target="_blank">GreatUniHack</a></li>
+                      <li>(2017) <a href="www.greatunihack.com" target="_blank">GreatUniHack</a></li>
                   </ul>
           </section>
       </div>
