Fixed HTML errors, add lang tag

--- a/index.html
+++ b/index.html
@@ -1,67 +1,62 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119425123-1"></script>
-    <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-119425123-1');</script>
-    <meta charset='utf-8'>
-    <link rel="stylesheet" href="stylesheets/stylesheet.css">
+<html lang="en">
+<head>
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119425123-1"></script>
+  <script>window.dataLayer = window.dataLayer || [];function gtag(){dataLayer.push(arguments);}gtag('js', new Date());gtag('config', 'UA-119425123-1');</script>
+  <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
+  <link rel="stylesheet" href="stylesheets/stylesheet.css">
 
-    <title>Sean Parker</title>
-  </head>
+  <title>Sean Parker</title>
+</head>
+<body>
+  <!-- HEADER -->
+  <div id="header_wrap" class="outer">
+    <header class="inner">
+      <h1 id="header_title"> Home Page </h1>
+    </header>
+  </div>
 
-  <body>
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-            <h1 id="header_title">
-                Home Page
-            </h1>
-        </header>
-    </div>
-
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <div id="main_content" class="inner">
-
-        <section id="personal_info" class="inner">
-              <h2> Personal Information </h2>
-              <div id="education">
-                <h3> Education </h3>
-                <ul>
-                    <li> (2017 - Present) BSc Computer Science at <a href="http://www.manchester.ac.uk" target="_blank"> The University of Manchester</a></li>
-                    <li> (2010 - 2017) <a href="http://www.st-ambrosecollege.org.uk" target="_blank">St Ambrose College</a></li>
-                </ul>
-              </div>
-              <div id="projects">
-                  <h3> Projects </h3>
-                  <ul>
-                      <li> <a href="http://www.github.com/seanjparker/civ-2d" target="_blank">civ-2d</a> - a 2D turn-based strategy game built using Java Swing</li>
-                      <li> <a href="http://www.github.com/seanjparker/chess" target="_blank">chess</a> - a chess engine with player vs computer</li>
-                      <li> <a href="http://www.github.com/alexdmtr/codeworks" target="_blank">codeworks</a> - open source online java editor and compiler</li>
-                  </ul>
-              </div>
-              <div id="results">
-                  <h3> Competitive Programming </h3>
-                  <ul>
-                      <li>(2017) <a href="http://www.ukiepc.info/2017/" target="_blank">UKIPEC Regional</a> 3<sup>rd</sup> place in Manchester, 48<sup>th</sup> in UK & Ireland</li>
-                      <li>(2017) <a href="http://www.nwerc.eu" target="_blank">NWERC World Qualifier</a> 113<sup>th</sup> in Northern Europe</li>
-                  </ul>
-              </div>
-              <div id="results">
-                  <h3> Hackathons </h3>
-                  <ul>
-                      <li>(2017) <a href="www.greatunihack.com" target="_blank">GreatUniHack</a></li>
-                  </ul>
+  <!-- MAIN CONTENT -->
+  <div id="main_content_wrap" class="outer">
+    <div id="main_content" class="inner">
+      <section id="personal_info" class="inner">
+        <h2> Personal Information </h2>
+        <div id="education">
+          <h3> Education </h3>
+            <ul>
+              <li> (2017 - Present) BSc Computer Science at <a href="http://www.manchester.ac.uk" target="_blank" rel="noopener"> The University of Manchester</a></li>
+              <li> (2010 - 2017) <a href="http://www.st-ambrosecollege.org.uk" target="_blank" rel="noopener">St Ambrose College</a></li>
+            </ul>
+          </div>
+          <div id="projects">
+            <h3> Projects </h3>
+            <ul>
+              <li> <a href="http://www.github.com/seanjparker/civ-2d" target="_blank" rel="noopener">civ-2d</a> - a 2D turn-based strategy game built using Java Swing</li>
+              <li> <a href="http://www.github.com/seanjparker/chess" target="_blank" rel="noopener">chess</a> - a chess engine with player vs computer</li>
+              <li> <a href="http://www.github.com/alexdmtr/codeworks" target="_blank" rel="noopener">codeworks</a> - open source online java editor and compiler</li>
+            </ul>
+          </div>
+          <div id="competitive-programming">
+            <h3> Competitive Programming </h3>
+            <ul>
+              <li>(2017) <a href="http://www.ukiepc.info/2017/" target="_blank" rel="noopener">UKIPEC Regional</a> 3<sup>rd</sup> place in Manchester, 48<sup>th</sup> in UK & Ireland</li>
+              <li>(2017) <a href="http://www.nwerc.eu" target="_blank" rel="noopener">NWERC World Qualifier</a> 113<sup>th</sup> in Northern Europe</li>
+            </ul>
+          </div>
+          <div id="hackathons">
+            <h3> Hackathons </h3>
+            <ul>
+              <li>(2017) <a href="http://www.greatunihack.com" target="_blank" rel="noopener">GreatUniHack</a></li>
+            </ul>
           </section>
+        </div>
       </div>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
+      <!-- FOOTER  -->
+      <div id="footer_wrap" class="outer">
+        <footer class="inner">
           <p><a href="mailto:sean.parker@student.manchester.ac.uk">Contact Me</a></p>
-      </footer>
-    </div>
-  </body>
+        </footer>
+      </div>
+    </body>
 </html>
