Add meta tag for SEO

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
+  <meta name="Description" content="Personal website of Sean Parker. Includes personal projects and competitive programming results.">
   <link rel="stylesheet" href="stylesheets/stylesheet.css">
-
   <title>Sean Parker</title>
 </head>
 <body>
