Add onword to projects

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
           <div id="projects">
             <h3> Projects </h3>
             <ul>
+              <li> <a href="http://gitlab.cs.man.ac.uk/Y8/onword" target="_blank" rel="noopener">OnWord</a> - OnWord allows people to create, share and complete crossword puzzles</li>
               <li> <a href="http://www.github.com/seanjparker/civ-2d" target="_blank" rel="noopener">civ-2d</a> - a 2D turn-based strategy game built using Java Swing</li>
               <li> <a href="http://www.github.com/seanjparker/chess" target="_blank" rel="noopener">chess</a> - a chess engine with player vs computer</li>
               <li> <a href="http://www.github.com/alexdmtr/codeworks" target="_blank" rel="noopener">codeworks</a> - open source online java editor and compiler</li>
