Add experience, add hackathon

--- a/index.html
+++ b/index.html
@@ -22,13 +22,20 @@
         <div id="education">
           <h3> Education </h3>
             <ul>
-              <li> (2017 - Present) BSc Computer Science at <a href="http://www.manchester.ac.uk" target="_blank" rel="noopener"> The University of Manchester</a></li>
+              <li> (2017 - 2020) BSc (Hons) Computer Science at <a href="http://www.manchester.ac.uk" target="_blank" rel="noopener"> The University of Manchester</a></li>
               <li> (2010 - 2017) <a href="http://www.st-ambrosecollege.org.uk" target="_blank" rel="noopener">St Ambrose College</a></li>
+            </ul>
+          </div>
+          <div id="exp">
+            <h3> Experience </h3>
+            <ul>
+              <li> HackSoc & GreatUniHack Development Team </li>
             </ul>
           </div>
           <div id="projects">
             <h3> Projects </h3>
             <ul>
+              <li> <a href="https://github.com/seanjparker/durhack18-stockmarket" target="_blank" rel="noopener">Marketshare</a> - Marketshare is a social platform which allows investors to share their portfolios with friends.</li>
               <li> <a href="http://gitlab.cs.man.ac.uk/Y8/onword" target="_blank" rel="noopener">OnWord</a> - OnWord allows people to create, share and complete crossword puzzles</li>
               <li> <a href="http://www.github.com/seanjparker/civ-2d" target="_blank" rel="noopener">civ-2d</a> - a 2D turn-based strategy game built using Java Swing</li>
               <li> <a href="http://www.github.com/seanjparker/chess" target="_blank" rel="noopener">chess</a> - a chess engine with player vs computer</li>
@@ -38,13 +45,15 @@
           <div id="competitive-programming">
             <h3> Competitive Programming </h3>
             <ul>
+              <li>(2018) <a href="http://www.ukiepc.info/2018/" target="_blank" rel="noopener">UKIPEC Regional</a> 2<sup>nd</sup> place in Manchester, 33<sup>rd</sup> in UK & Ireland</li>
               <li>(2017) <a href="http://www.ukiepc.info/2017/" target="_blank" rel="noopener">UKIPEC Regional</a> 3<sup>rd</sup> place in Manchester, 48<sup>th</sup> in UK & Ireland</li>
-              <li>(2017) <a href="http://www.nwerc.eu" target="_blank" rel="noopener">NWERC World Qualifier</a> 113<sup>th</sup> in Northern Europe</li>
+              <li>(2017) <a href="http://www.nwerc.eu" target="_blank" rel="noopener">NWERC World Qualifier</a></li>
             </ul>
           </div>
           <div id="hackathons">
             <h3> Hackathons </h3>
             <ul>
+              <li>(2018) <a href="https://durhack.com/" target="_blank" rel="noopener">DurHack</a></li>
               <li>(2017) <a href="http://www.greatunihack.com" target="_blank" rel="noopener">GreatUniHack</a></li>
             </ul>
           </section>
@@ -53,7 +62,7 @@
       <!-- FOOTER  -->
       <div id="footer_wrap" class="outer">
         <footer class="inner">
-          <p><a href="mailto:sean.parker@student.manchester.ac.uk">Contact Me</a></p>
+          <p><a href="mailto:me@seanjparker.com">Contact Me</a></p>
         </footer>
       </div>
     </body>
