--- a/index.html
+++ b/index.html
@@ -1,69 +1,324 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1" charset="utf-8">
-  <meta name="Description" content="Personal website of Sean Parker. Includes personal projects and competitive programming results.">
-  <link rel="stylesheet" href="stylesheets/stylesheet.css">
-  <title>Sean Parker</title>
-</head>
-<body>
-  <!-- HEADER -->
-  <div id="header_wrap" class="outer">
-    <header class="inner">
-      <h1 id="header_title"> Home Page </h1>
-    </header>
-  </div>
+<html>
 
-  <!-- MAIN CONTENT -->
-  <div id="main_content_wrap" class="outer">
-    <div id="main_content" class="inner">
-      <section id="personal_info" class="inner">
-        <h2> Personal Information </h2>
-        <div id="education">
-          <h3> Education </h3>
-            <ul>
-              <li> (2017 - 2020) BSc (Hons) Computer Science at <a href="http://www.manchester.ac.uk" target="_blank" rel="noopener"> The University of Manchester</a></li>
-              <li> (2010 - 2017) <a href="http://www.st-ambrosecollege.org.uk" target="_blank" rel="noopener">St Ambrose College</a></li>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Sean Joseph Parker</title>
+  <!-- web-fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
+  <!-- font-awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+    crossorigin="anonymous">
+
+  <!-- Bootstrap -->
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+    crossorigin="anonymous">
+
+  <!-- Style CSS -->
+  <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body id="page-top" data-spy="scroll" data-target=".navbar">
+  <div id="main-wrapper">
+    <div class="columns-block container">
+      <div class="left-col-block blocks">
+        <header class="header theiaStickySidebar">
+          <div class="content">
+            <h1>Sean Joseph Parker</h1>
+            <span class="lead">Computer Science Student</span>
+
+            <div class="about-text">
+              <p>Industrious and attentive Computer Science student with an interest in Artificial Intelligence.
+                Passionate competitive programmer, software developer and space enthusiast.</p>
+            </div>
+            <ul class="social-icon">
+              <li><a href="https://www.linkedin.com/in/seanjparker/" target="_blank"><i class="fab fa-linkedin fa-lg"
+                    aria-hidden="true"></i></a></li>
+              <li><a href="https://github.com/seanjparker/" target="_blank"><i class="fab fa-github fa-lg" aria-hidden="true"></i></a></li>
             </ul>
           </div>
-          <div id="exp">
-            <h3> Experience </h3>
-            <ul>
-              <li> HackSoc & GreatUniHack Development Team </li>
-            </ul>
-          </div>
-          <div id="projects">
-            <h3> Projects </h3>
-            <ul>
-              <li> <a href="https://github.com/seanjparker/durhack18-stockmarket" target="_blank" rel="noopener">Marketshare</a> - Marketshare is a social platform which allows investors to share their portfolios with friends.</li>
-              <li> <a href="http://gitlab.cs.man.ac.uk/Y8/onword" target="_blank" rel="noopener">OnWord</a> - OnWord allows people to create, share and complete crossword puzzles</li>
-              <li> <a href="http://www.github.com/seanjparker/civ-2d" target="_blank" rel="noopener">civ-2d</a> - a 2D turn-based strategy game built using Java Swing</li>
-              <li> <a href="http://www.github.com/seanjparker/chess" target="_blank" rel="noopener">chess</a> - a chess engine with player vs computer</li>
-              <li> <a href="http://www.github.com/alexdmtr/codeworks" target="_blank" rel="noopener">codeworks</a> - open source online java editor and compiler</li>
-            </ul>
-          </div>
-          <div id="competitive-programming">
-            <h3> Competitive Programming </h3>
-            <ul>
-              <li>(2018) <a href="http://www.ukiepc.info/2018/" target="_blank" rel="noopener">UKIPEC Regional</a> 2<sup>nd</sup> place in Manchester, 33<sup>rd</sup> in UK & Ireland</li>
-              <li>(2017) <a href="http://www.ukiepc.info/2017/" target="_blank" rel="noopener">UKIPEC Regional</a> 3<sup>rd</sup> place in Manchester, 48<sup>th</sup> in UK & Ireland</li>
-              <li>(2017) <a href="http://www.nwerc.eu" target="_blank" rel="noopener">NWERC World Qualifier</a></li>
-            </ul>
-          </div>
-          <div id="hackathons">
-            <h3> Hackathons </h3>
-            <ul>
-              <li>(2018) <a href="https://durhack.com/" target="_blank" rel="noopener">DurHack</a></li>
-              <li>(2017) <a href="http://www.greatunihack.com" target="_blank" rel="noopener">GreatUniHack</a></li>
-            </ul>
+        </header>
+      </div>
+
+      <div class="right-col-block blocks">
+        <div class="theiaStickySidebar">
+
+          <section class="section-wrapper section-education">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="section-title">
+                    <h2>Education</h2>
+                  </div>
+                </div>
+              </div>
+              <!--row-->
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="content-item">
+                    <small>2017 - 2020</small>
+                    <h3>BSc(Hons) Computer Science</h3>
+                    <h4>University of Manchester</h4>
+
+                    <p>United Kingdom, Manchester</p>
+                  </div>
+                  <!-- experience-item -->
+                  <div class="content-item">
+                    <small>2010 - 2017</small>
+                    <h4>St Ambrose College</h4>
+
+                    <p>United Kingdom, Hale Barns</p>
+                  </div>
+                </div>
+              </div>
+              <!--row-->
+            </div>
+            <!-- container-fluid -->
           </section>
+          <!-- section-education -->
+
+          <section class="section-wrapper section-experience gray-bg">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="section-title">
+                    <h2>Experience</h2>
+                  </div>
+                </div>
+              </div>
+              <!--.row-->
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="content-item">
+                    <small>2018 - Present</small>
+                    <h3>Software Developer</h3>
+                    <h4>UniCS</h4>
+                    <h5>University of Manchester</h5>
+                    <p>Created Hackathon Hub used by over 400 people across two hackathons</p>
+                    <div class="github-card text-center" data-github="hacksoc-manchester/Hackathon_Attendee_Hub"
+                      data-width="400" data-height="" data-theme="default"></div>
+                    <script src="//cdn.jsdelivr.net/github-cards/latest/widget.js"></script>
+                  </div>
+                </div>
+              </div>
+              <!--.row-->
+            </div>
+            <!-- .container-fluid -->
+          </section>
+          <!-- .section-experience -->
+
+          <section class="section-wrapper">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="section-title">
+                    <h2>Past Projects</h2>
+                  </div>
+                </div>
+              </div>
+              <div class="card-deck">
+                <div class="row">
+                  <div class="col-lg-6">
+                    <div class="card">
+                      <a href="https://github.com/seanjparker/chess" target="_blank">
+                        <img src="img/repos/gh_main_chess.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title text-center">Chess Engine</h5>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-6">
+                    <div class="card">
+                      <a href="https://github.com/seanjparker/civ-2d" target="_blank">
+                        <img src="img/repos/gh_main_civ.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title text-center">Civilization</h5>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-6">
+                    <div class="card">
+                      <a href="https://gitlab.cs.man.ac.uk/Y8/onword" target="_blank">
+                        <img src="img/gl_main_onword.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title text-center">OnWord</h5>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-6">
+                    <div class="card">
+                      <a href="https://github.com/seanjparker/durhack18-stockmarket" target="_blank">
+                        <img src="img/gh_main_marketshare.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title text-center">MarketShare</h5>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+
+                  <div class="col-lg-6">
+                    <div class="card">
+                      <a href="https://devpost.com/software/codeworks" target="_blank">
+                        <img src="img/gl_main_codeworks.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                          <h5 class="card-title text-center">Codeworks</h5>
+                        </div>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+          </section>
+          <!-- .portfolio -->
+
+          <section class="section-wrapper section-competitions">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="section-title">
+                    <h2>Programming Competitions</h2>
+                  </div>
+                </div>
+              </div>
+              <!--.row-->
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="content-item">
+                    <small>Oct 2018</small>
+                    <h3>ACM UKIEPC Regional</h3>
+                    <h5>University of Manchester</h5>
+                    <p>Placed 2<sup>nd</sup> in Manchester, 33<sup>rd</sup> in UK & Ireland</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="content-item">
+                    <small>Nov 2017</small>
+                    <h3>ACM NWERC World Qualifier</h3>
+                    <h5>University of Bath</h5>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="content-item">
+                    <small>Oct 2017</small>
+                    <h3>ACM UKIEPC Regional</h3>
+                    <h5>University of Manchester</h5>
+                    <p>Placed 3<sup>rd</sup> in Manchester, 48<sup>th</sup> in UK & Ireland</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- .container-fluid -->
+          </section>
+          <!-- .section-competitions -->
+
+          <section class="section-wrapper section-hackathons">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="section-title">
+                    <h2>Hackathons</h2>
+                  </div>
+                </div>
+              </div>
+              <!--.row-->
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="content-item">
+                    <small>Nov 2018</small>
+                    <h3>DurHack</h3>
+                    <h5>University of Durham</h5>
+                    <p>Created MarketShare in JavaScript</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="content-item">
+                    <small>Oct 2017</small>
+                    <h3>GreatUniHack</h3>
+                    <h5>University of Manchester</h5>
+                    <p>Created Codeworks, won WebApplicationsUK challenge</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- .container-fluid -->
+          </section>
+          <!-- .section-hackathons -->
+
+          <section class="section-contact section-wrapper gray-bg">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="section-title">
+                    <h2>Contact</h2>
+                  </div>
+                </div>
+              </div>
+              <!--.row-->
+              <div class="row">
+                <div class="col-md-12">
+                  <strong>Email</strong><br>
+                  <a href="mailto:me@seanjparker.com">me@seanjparker.com</a>
+                  </address>
+                </div>
+              </div>
+            </div>
+            <!--.container-fluid-->
+          </section>
+          <!--.section-contact-->
+
+          <footer class="footer">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="copytext">Copyright &copy;
+                    <script type="text/javascript">
+                      var d = new Date()
+                      document.write(d.getFullYear())
+                    </script>
+                    Sean J Parker</div>
+                </div>
+              </div>
+              <!--.row-->
+            </div>
+            <!-- .container-fluid -->
+          </footer>
+          <!-- .footer -->
         </div>
+        <!-- Sticky -->
       </div>
-      <!-- FOOTER  -->
-      <div id="footer_wrap" class="outer">
-        <footer class="inner">
-          <p><a href="mailto:me@seanjparker.com">Contact Me</a></p>
-        </footer>
-      </div>
-    </body>
+      <!-- .right-col-block -->
+    </div>
+    <!-- .columns-block -->
+  </div>
+  <!-- #main-wrapper -->
+
+  <!-- jquery -->
+  <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+    crossorigin="anonymous"></script>
+
+  <!-- Bootstrap -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
+  <script src="js/theia-sticky-sidebar.js"></script>
+  <script src="js/scripts.js"></script>
+</body>
+
 </html>
