Improve design add internship

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-GB">
 
 <head>
   <meta charset="utf-8">
@@ -16,12 +16,12 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
   <!-- font-awesome -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
-    crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+    integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 
   <!-- Bootstrap -->
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
-    crossorigin="anonymous">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
   <!-- Style CSS -->
   <link href="css/style.css" rel="stylesheet">
@@ -41,9 +41,18 @@
                 Passionate competitive programmer, software developer and space enthusiast.</p>
             </div>
             <ul class="social-icon">
-              <li><a href="https://www.linkedin.com/in/seanjparker/" target="_blank"><i class="fab fa-linkedin fa-lg"
-                    aria-hidden="true"></i></a></li>
-              <li><a href="https://github.com/seanjparker/" target="_blank"><i class="fab fa-github fa-lg" aria-hidden="true"></i></a></li>
+              <li>
+                <a href="https://www.linkedin.com/in/seanjparker/" target="_blank">
+                  <i class="fab fa-linkedin fa-lg" aria-hidden="true">
+                  </i>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/seanjparker/" target="_blank">
+                  <i class="fab fa-github fa-lg" aria-hidden="true">
+                  </i>
+                </a>
+              </li>
             </ul>
           </div>
         </header>
@@ -51,6 +60,33 @@
 
       <div class="right-col-block blocks">
         <div class="theiaStickySidebar">
+
+          <section class="section-wrapper section-experience">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="section-title">
+                    <h2>Experience</h2>
+                  </div>
+                </div>
+              </div>
+              <!--row-->
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="content-item">
+                    <small>June 2019 - September 2019</small>
+                    <h3>Apple</h3>
+                    <h4>IS&amp;T Internship</h4>
+
+                    <p>United Kingdom, London</p>
+                  </div>
+                </div>
+              </div>
+              <!--row-->
+            </div>
+            <!-- container-fluid -->
+          </section>
+          <!-- section-experience -->
 
           <section class="section-wrapper section-education">
             <div class="container-fluid">
@@ -71,7 +107,7 @@
 
                     <p>United Kingdom, Manchester</p>
                   </div>
-                  <!-- experience-item -->
+                  <!-- education-item -->
                   <div class="content-item">
                     <small>2010 - 2017</small>
                     <h4>St Ambrose College</h4>
@@ -91,7 +127,7 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="section-title">
-                    <h2>Experience</h2>
+                    <h2>Volunteer Experience</h2>
                   </div>
                 </div>
               </div>
@@ -99,8 +135,16 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="content-item">
-                    <small>2018 - Present</small>
-                    <h3>Software Developer</h3>
+                    <small>May 2019 - Present</small>
+                    <h3>Dev Team Lead</h3>
+                    <h4>UniCS</h4>
+                    <h5>University of Manchester</h5>
+                    <p>Managed and developing a full suite of tools to support the running of Hackathons, applications,
+                      and Hub for the event</p>
+                  </div>
+                  <div class="content-item">
+                    <small>Sep 2018 - May 2019</small>
+                    <h3>Dev Team</h3>
                     <h4>UniCS</h4>
                     <h5>University of Manchester</h5>
                     <p>Created Hackathon Hub used by over 400 people across two hackathons</p>
@@ -130,7 +174,7 @@
                   <div class="col-lg-6">
                     <div class="card">
                       <a href="https://github.com/seanjparker/chess" target="_blank">
-                        <img src="img/repos/gh_main_chess.png" class="card-img-top" alt="...">
+                        <img src="img/repos/gh_main_chess.png" class="card-img-top" alt="">
                         <div class="card-body">
                           <h5 class="card-title text-center">Chess Engine</h5>
                         </div>
@@ -141,7 +185,7 @@
                   <div class="col-lg-6">
                     <div class="card">
                       <a href="https://github.com/seanjparker/civ-2d" target="_blank">
-                        <img src="img/repos/gh_main_civ.png" class="card-img-top" alt="...">
+                        <img src="img/repos/gh_main_civ.png" class="card-img-top" alt="">
                         <div class="card-body">
                           <h5 class="card-title text-center">Civilization</h5>
                         </div>
@@ -152,7 +196,7 @@
                   <div class="col-lg-6">
                     <div class="card">
                       <a href="https://gitlab.cs.man.ac.uk/Y8/onword" target="_blank">
-                        <img src="img/gl_main_onword.png" class="card-img-top" alt="...">
+                        <img src="img/gl_main_onword.png" class="card-img-top" alt="">
                         <div class="card-body">
                           <h5 class="card-title text-center">OnWord</h5>
                         </div>
@@ -163,7 +207,7 @@
                   <div class="col-lg-6">
                     <div class="card">
                       <a href="https://github.com/seanjparker/durhack18-stockmarket" target="_blank">
-                        <img src="img/gh_main_marketshare.png" class="card-img-top" alt="...">
+                        <img src="img/gh_main_marketshare.png" class="card-img-top" alt="">
                         <div class="card-body">
                           <h5 class="card-title text-center">MarketShare</h5>
                         </div>
@@ -174,7 +218,7 @@
                   <div class="col-lg-6">
                     <div class="card">
                       <a href="https://devpost.com/software/codeworks" target="_blank">
-                        <img src="img/gl_main_codeworks.png" class="card-img-top" alt="...">
+                        <img src="img/gl_main_codeworks.png" class="card-img-top" alt="">
                         <div class="card-body">
                           <h5 class="card-title text-center">Codeworks</h5>
                         </div>
@@ -183,6 +227,7 @@
                   </div>
                 </div>
               </div>
+            </div>
           </section>
           <!-- .portfolio -->
 
@@ -199,10 +244,30 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="content-item">
+                    <small>Feb 2019</small>
+                    <h3>Google Hashcode</h3>
+                    <h5>University of Manchester</h5>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="content-item">
                     <small>Oct 2018</small>
                     <h3>ACM UKIEPC Regional</h3>
                     <h5>University of Manchester</h5>
                     <p>Placed 2<sup>nd</sup> in Manchester, 33<sup>rd</sup> in UK & Ireland</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="content-item">
+                    <small>Feb 2018</small>
+                    <h3>Google Hashcode</h3>
+                    <h5>University of Manchester</h5>
                   </div>
                 </div>
               </div>
@@ -282,7 +347,6 @@
                 <div class="col-md-12">
                   <strong>Email</strong><br>
                   <a href="mailto:me@seanjparker.com">me@seanjparker.com</a>
-                  </address>
                 </div>
               </div>
             </div>
@@ -295,11 +359,12 @@
               <div class="row">
                 <div class="col-md-12">
                   <div class="copytext">Copyright &copy;
-                    <script type="text/javascript">
+                    <script>
                       var d = new Date()
                       document.write(d.getFullYear())
                     </script>
-                    Sean J Parker</div>
+                    Sean J Parker
+                  </div>
                 </div>
               </div>
               <!--.row-->
@@ -316,8 +381,12 @@
   </div>
   <!-- #main-wrapper -->
 
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>  
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
+    integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous">
+    </script>
   <script src="js/theia-sticky-sidebar.js"></script>
   <script src="js/scripts.js"></script>
 </body>
